<resources>
    <string name="app_name">Messenger</string>
    <string name="register_username">Username</string>
    <string name="register_email">E Mail</string>
    <string name="register_password">Password</string>
    <string name="register_register">REGISTER</string>
    <string name="register_signin">Already Have Account? Signin</string>
    <string name="login_login">LOGIN</string>
    <string name="login_signup">Create An Account</string>
    <string name="register_select_photo">SELECT PHOTO</string>
    <string name="chatlog_send">SEND</string>
</resources>
