<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHoloGreen"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="70dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/register_username"
        android:padding="6dp" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:hint="@string/register_email"
        android:padding="6dp" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:hint="@string/register_password"
        android:padding="6dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/register_register" />

    <TextView
        android:id="@+id/txt_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/register_signin"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />


</LinearLayout>